Pass JWT token to Feign Clients requests